roles/install-app/files/rms/0rms-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rms
