roles/install-app/files/rms/rms-server-dc1.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rms-server-dc1
  namespace: rms
  labels:
    app: rms-server
    zone: dc1
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: dc1
      app: rms-server
  template:
    metadata:
      name: rms-server-dc1
      labels:
        app: rms-server
        zone: dc1
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - rms-server
      nodeSelector:
        zone: dc1
      securityContext:
        runAsUser: 0
      volumes:
        - name: config-volume
          configMap:
            name: rms-server-configs
            defaultMode: 420
      containers:
        - name: rms-server
          image: 192.168.160.47:8888/rms/rms-server:2.1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '4'
              memory: 8Gi
            requests:
              cpu: 200m
              memory: 1Gi
          volumeMounts:
            - name: config-volume
              mountPath: /opt/RMSServer_linux/Config
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /metrics
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - '40'
      terminationGracePeriodSeconds: 120
      restartPolicy: Always
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 2
