roles/install-app/files/rms/rms-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rms-ui
  namespace: rms
spec:
  selector:
    app: rms-ui
  ports:
    - port: 80
      nodePort: 30895
  type: NodePort
