roles/install-app/files/rms/rms-server-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rms-server
  namespace: rms
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/demo-monitoring/`)
      services:
        - name: demo-monitoring
          port: 8080
